# toggl_tracker_assistant

./: README.md  pyproject.toml
src/: main.py
tests/: test_toggl_service.py
toggl_tracker_assistant/: config.py  config_ui.py  main.py  start_ui.py  toggl_service.py  ui.py
